--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,7 @@
 name: Deploy React App to GitHub Pages
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main  # deploy whenever you push to main
