--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "typescript": "^5.7.2",
     "vite": "^6.0.3"
   },
-  "homepage": "https://taylorjason.github.io/templater",
+  "homepage": "https://taylorjason.github.io/Templater",
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules. One top of the standard Vite setup, [tailwindcss](https://tailwindcss.com/) is installed and ready to be used in React components.",
   "main": "postcss.config.js",
   "repository": {
